# AirFranceKLMAPI

./: .env.example  Dockerfile  README.md  __main__.py  app.py  config.py  docker-compose.yaml  postgresql.conf  pyproject.toml  requirements.txt  scalar.html  schema.sql  script.sql
.github/workflows/: deployment.yaml
AirFranceKLMAPI/: __init__.py  app.py  client.py  config.py  requests.py
AirFranceKLMAPI/components/: statsitics.py
AirFranceKLMAPI/models/: airports.py  companies.py  flights.py
AirFranceKLMAPI/routes/aeroports/: aeroports.py
AirFranceKLMAPI/routes/compagnies/: compagnies.py
AirFranceKLMAPI/routes/planes/: planes.py
AirFranceKLMAPI/routes/public/: public.py
AirFranceKLMAPI/routes/service/: service.py
AirFranceKLMAPI/routes/vols/: vols.py
AirFranceKLMAPI/utils/: cache.py  date.py  logger.py
models/: planes.py  responses.py  status.py
routes/aeroports/: aeroports.py
routes/compagnies/: compagnies.py
routes/planes/: planes.py
routes/public/: public.py
routes/service/: service.py
routes/vols/: vols.py
routes/websocket/: websocket.py
utils/: cache.py  logger.py
